# Database-Manager

./: LICENSE  README.md  __main__.py  config.py  pyproject.toml
db_manager/: .env.example  __main__.py  config.py
db_manager/frames/: button_frame.py  data_frame.py  exception_frame.py  extra_frame.py  main_frame.py  navigation_frame.py  salary_frame.py
db_manager/modules/: database.py  db_classes.py
frames/: button_frame.py  data_frame.py  extra_frame.py  main_frame.py  navigation_frame.py  salary_frame.py
modules/: database.py  db_classes.py
