[tool.poetry]
name = "db-manager"
version = "0.1.0"
description = ""
authors = ["Emeraldik"]
readme = "README.md"
packages = [{include = "db_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
customtkinter = "^5.1.3"
psycopg2 = "^2.9.6"
typing-extensions = "^4.6.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
